# chatui

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  styles.css  tailwind.config.js
docs/: testing.md
shared/: Cargo.toml
shared/src/: lib.rs
src/: app.rs  input.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_client.rs  connections_store.rs  credentials.rs  history.rs  lib.rs  main.rs  settings.rs
src/app/: bindings.rs  context.rs  markdown.rs  theme.rs
src/app/components/: connections_modal.rs  message_feed.rs  mod.rs  prompt_input.rs  selector_header.rs  sidebar.rs  thinking_block.rs
