[package]
name = "chatui-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
shared = { path = "./shared" }
uuid = { version = "1", features = ["v4", "js"] }
web-sys = { version = "0.3", features = ["File", "FileReader", "FileList", "HtmlInputElement", "HtmlButtonElement", "DragEvent", "DataTransfer", "Event", "KeyboardEvent", "Window", "Document", "Element", "DomRect", "Navigator", "Clipboard", "Storage"] }
chrono = { version = "0.4", features = ["wasmbind"] }

[workspace]
members = ["src-tauri", "shared"]
